# nonebot-plugin-genshin-cos

./: .deepsource.toml  .pdm-python  .pre-commit-config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  错误报告.md
.github/workflows/: python-package.yml  python-publish.yml
nonebot_plugin_genshin_cos/: __init__.py  config.py  hoyospider.py  matcher.py  utils.py
